Create a file for each jar containing a line for each class that got loaded