@@ -1,32 +1,62 @@
 package com.leastlogic.jartool;
 
 import java.io.BufferedReader;
+import java.io.BufferedWriter;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.TreeMap;
 import java.util.TreeSet;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 public class JarTool {
+   private static final Pattern lParse =
+      Pattern.compile("(.+)\\[class,load] (.+?) source: file:/(.+)$");
 
    public static void main(String[] args) throws Exception {
-      TreeSet<String> sources = new TreeSet<>();
-      Path loadLog = Paths.get("classLoad.log");
+      TreeMap<String, TreeSet<String>> sources = new TreeMap<>();
+      Path loadLog = Path.of("classLoad.log");
 
       try (BufferedReader reader = Files.newBufferedReader(loadLog)) {
          String line;
 
          while ((line = reader.readLine()) != null) {
-            String[] parts = line.split(" source: ");
+            Matcher m = lParse.matcher(line);
 
-            if (parts.length > 1) {
-               sources.add(parts[1]);
+            if (m.find()) {
+               String src = m.group(3);
+
+               if (src.startsWith("C:/Users/") && src.endsWith(".jar")) {
+                  TreeSet<String> classSet;
+                  classSet = sources.computeIfAbsent(src, k -> new TreeSet<>());
+
+                  String clazz = m.group(2);
+                  classSet.add(clazz);
+               }
             }
          }
       } // end try with resources
+      String dir = args.length > 0 ? args[0] : ".";
 
-      for (String source : sources) {
-         System.out.println(source);
-      }
+      sources.forEach((src, classSet) -> {
+         String outFn = Path.of(src).getFileName() + ".lst";
+         Path outLst = Path.of(dir, outFn);
+         System.out.println("Writing to " + outLst);
+
+         try (BufferedWriter writer = Files.newBufferedWriter(outLst)) {
+
+            classSet.forEach(clazz -> {
+               try {
+                  writer.write(clazz);
+                  writer.write('\n');
+               } catch (Exception e) {
+                  throw new RuntimeException(e);
+               }
+            });
+         } catch (Exception e) {
+            throw new RuntimeException(e);
+         } // end try with resources
+      });
 
    } // end main(String[])
 
